[gd_scene load_steps=5 format=3 uid="uid://bxo784b8te3gx"]

[ext_resource type="Script" uid="uid://cu4d7qk2e72xf" path="res://Script/Batalha.gd" id="1_k827k"]
[ext_resource type="Script" uid="uid://kkcdmw2axuj3" path="res://Script/Gem.gd" id="2_x5ja2"]
[ext_resource type="PackedScene" uid="uid://chab4dygkafld" path="res://Cena/steven.tscn" id="3_wg2n5"]
[ext_resource type="PackedScene" uid="uid://dthqs3wj2rd5r" path="res://Cena/inimigo.tscn" id="4_74go7"]

[node name="Batalha" type="Node2D"]
script = ExtResource("1_k827k")

[node name="Gem" type="Node2D" parent="."]
script = ExtResource("2_x5ja2")
metadata/_custom_type_script = "uid://kkcdmw2axuj3"

[node name="steven" parent="." instance=ExtResource("3_wg2n5")]
position = Vector2(430, -1)

[node name="inimigo" parent="." instance=ExtResource("4_74go7")]
position = Vector2(0, 2)

[node name="text" type="Label" parent="."]
offset_top = 531.0
offset_right = 686.0
offset_bottom = 651.0
justification_flags = 227

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 820.0
offset_top = 466.0
offset_right = 1074.0
offset_bottom = 601.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="attack" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="defend" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Defend"

[node name="heal" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Heal"

[node name="ultimate" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Ultimate
"

[connection signal="pressed" from="HBoxContainer/attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="HBoxContainer/defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="HBoxContainer/heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="HBoxContainer/ultimate" to="." method="_on_ultimate_pressed"]
